--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,33 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width:100%;
+  max-width: 400px;
+  margin: 0 auto;
+  
+}
+
+label{
+  align-items: center;
+}
+.pizza-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+img {
+  max-width: 100%;
+  max-height: 100%;
+}
+ h1{
+  text-align: center;
+}
+nav  {
+  display: flex;
+  justify-content: space-around;
+}
